// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legend:  should render 1`] = `
<div>
  <div>
    <LegendItem
      key="0"
      name="header"
    />
  </div>
  <Grid>
    <Grid.Column>
      <LegendItem
        key="0"
        name="primary"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </Grid.Column>
  </Grid>
</div>
`;

exports[`Legend:  should render with secondaryData 1`] = `
<div>
  <div>
    <LegendItem
      key="0"
      name="header"
    />
  </div>
  <Grid>
    <Grid.Column>
      <LegendItem
        key="0"
        name="primary"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </Grid.Column>
    <Grid.Column>
      <LegendItem
        key="0"
        name="secondary"
        onClick={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      />
    </Grid.Column>
  </Grid>
</div>
`;
